objects/pse__Generic_Batch_Task_Log__c.object
<CustomObject>
    <description>Information about PSA Batch Processes.</description>
    <fields>
        <fullName>pse__Generic_Batch_Task__c</fullName>
        <label>Generic Batch Task Log</label>
        <referenceTo>pse__Generic_Batch_Task__c</referenceTo>
        <relationshipLabel>BatchProcessControlLogs</relationshipLabel>
        <relationshipName>BatchProcessControlLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Log_Type__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Generic Batch Task Log</label>
    <nameField>
        <label>Generic Batch Task Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Generic Batch Task Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>